pro/src/pages/Collaborators/Collaborators.module.scss
@use "styles/mixins/_fonts.scss" as fonts;
@use "styles/mixins/_rem.scss" as rem;

.section {
  margin-bottom: rem.torem(32px);
  padding-bottom: 0;
  padding-top: 0;

  .main-list-title {
    @include fonts.title2;

    margin: rem.torem(32px) 0;
  }

  .subtitle {
    @include fonts.title4;

    margin-bottom: rem.torem(8px);
  }

  .description {
    margin-bottom: rem.torem(24px);
  }

  .invitation-form {
    margin-bottom: rem.torem(32px);
  }

  .invitation-email-wrapper {
    display: flex;
    align-items: flex-end;
    gap: rem.torem(8px);
  }

  .invitation-email-field {
    width: 100%;
    margin-bottom: rem.torem(8px);
  }

  .add-member-button {
    margin-bottom: rem.torem(32px);

    @media (width <= 414px) {
      &[data-error="true"] {
        margin-bottom: rem.torem(48px);
      }
    }
  }

  .members-container {
    margin-bottom: rem.torem(24px);
    max-width: 100%;
    position: relative;

    &::before {
      content: "";
      position: absolute;
      display: block;
      width: rem.torem(45px);
      top: 0;
      right: 0;
      bottom: 0;
      z-index: 2;
      box-shadow: inset rem.torem(-45px) 0 rem.torem(15px) rem.torem(-30px)
        white;
    }

    .members-inner {
      overflow-x: auto;
    }
  }

  .members-list {
    border-collapse: separate;
    min-width: rem.torem(365px);

    th {
      @include fonts.body-accent-xs;

      padding-bottom: rem.torem(16px);
      vertical-align: middle;
      text-align: left;
    }

    td {
      @include fonts.body;

      vertical-align: baseline;
      text-align: left;
      padding-right: rem.torem(16px);
    }

    tr:not(:last-child) td {
      padding-bottom: rem.torem(12px);
    }
  }
}

.member-email {
  display: flex;
  word-break: keep-all;
}

.member-status {
  width: rem.torem(90px);
  word-break: keep-all;
}

.display-all-members-button {
  margin-top: rem.torem(20px);
}

.title {
  @include fonts.title1;
}

